# Ceres_testy

./: CMakeLists.txt  README.md  komo.cpp  komo.h  komo_1x.cpp  komo_main.cpp  main.cpp  plan.txt  testy.cpp  tutorial.cpp
constrained/: casadi_skusky.py  nu_loss.cpp  nu_loss.h  squared_penalty_method.cpp
unconstrained/: komo_v2.cpp  komo_v3_deriv.cpp  testy_komo.cpp
